Resolves: tdf#155046 Accept true and false as 1 and 0 for OOXML boolean cells

Encountered in the wild written by
https://www.npmjs.com/package/excel4node
https://github.com/advisr-io/excel4node/blob/c14213abb9a511ff786c574e473f53006a85e4f9/source/lib/cell/cell.js#L74

Change-Id: Ib21242a55f0d8530fd9120b07a096a9908f451bc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151101
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins
(cherry picked from commit e45d77a41139aad38151f4d8e48fd894fd9811a6)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151119
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>